--- a/sitebeta4.html
+++ b/sitebeta4.html
@@ -26,7 +26,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="menu_dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Quem Somos</a>
                             <div class="dropdown-menu">
-                                <a href="Sitebeta3.html" class="dropdown-item">Sobre nós</a>
+                                <a href="Sobre nós.html" class="dropdown-item">Sobre nós</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Serviços</a>
@@ -146,7 +146,7 @@
             <div id="rodape" class="container">
                 <div id="rodape" class="row">
                     <div class="col-md-1 lista_footer"><a href="#">Home</a></div>
-                    <div class="col-md-1 lista_footer"><a href="Sitebeta3.html">Quem somos</a></div>
+                    <div class="col-md-1 lista_footer"><a href="Sobre nós.html">Quem somos</a></div>
                     <div class="col-md-1 lista_footer"><a href="#">Serviços</a></div>
                     <div class="col-md-1 lista_footer"><a href="#">Fale conosco</a></div>
                 </div>
